[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aa-bender-cog"
version = "0.1.6"
description = "Alliance Auth Discord cog that posts a random Futurama Bender gif on /bender"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "LordStyle" },
]
keywords = ["allianceauth", "eve-online", "discord", "aadiscordbot", "futurama"]
classifiers = [
    "Environment :: Plugins",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

# Intentionally no `dependencies = [...]` here — Alliance Auth and
# aadiscordbot must already be installed in the host environment.
# Declaring them would risk pip resolving conflicting versions on install.
# aiohttp is brought in transitively by aadiscordbot.

[project.urls]
Repository = "https://github.com/TheLordStyle/aa-bender-cog"
Issues = "https://github.com/TheLordStyle/aa-bender-cog/issues"

[tool.setuptools.packages.find]
include = ["aa_bender*"]
